--- a/reinno_login/src/main/resources/static/login.html
+++ b/reinno_login/src/main/resources/static/login.html
@@ -34,7 +34,7 @@
                                                     placeholder="비밀번호를 작성해주세요." id="user_passwd" autocomplete="off">
                                                 <i class="input-icon uil uil-lock-alt"></i>
                                             </div>
-                                            <a href="#" class="btn mt-4">로그인</a>
+                                            <a href="#" id="login_btn" class="btn mt-4">로그인</a>
                                         </div>
                                     </div>
                                 </div>
@@ -43,25 +43,25 @@
                                         <div class="section text-center">
                                             <h4 class="mb-4 pb-3">회원가입</h4>
                                             <div class="form-group">
-                                                <input type="email" name="user_email" class="form-style"
-                                                    placeholder="이메일을 작성해주세요." id="user_email" autocomplete="off">
+                                                <input type="email" name="signup_user_email" class="form-style"
+                                                    placeholder="이메일을 작성해주세요." id="signup_user_email" autocomplete="off">
                                                 <i class="input-icon uil uil-user"></i>
                                             </div>
                                             <div class="form-group mt-2">
-                                                <input type="password" name="user_passwd" class="form-style"
-                                                    placeholder="비밀번호를 작성해주세요." id="user_passwd" autocomplete="off">
+                                                <input type="password" name="signup_user_passwd" class="form-style"
+                                                    placeholder="비밀번호를 작성해주세요." id="signup_user_passwd" autocomplete="off">
                                                 <i class="input-icon uil uil-at"></i>
                                             </div>
                                             <div class="form-group mt-2">
-                                                <input type="text" name="user_name" class="form-style"
-                                                    placeholder="이름을 작성해주세요." id="user_name" autocomplete="off">
+                                                <input type="text" name="signup_user_name" class="form-style"
+                                                    placeholder="이름을 작성해주세요." id="signup_user_name" autocomplete="off">
                                                 <i class="input-icon uil uil-lock-alt"></i>
                                             </div>
                                             <div class="form-group mt-2">
-                                                <input type="text" name="user_tel" class="form-style" placeholder="전화번호를 작성해주세요." id="user_tel" autocomplete="off">
+                                                <input type="text" name="signup_user_tel" id="signup_user_tel" class="form-style" placeholder="전화번호를 작성해주세요." id="user_tel" autocomplete="off">
                                                 <i class="input-icon uil uil-lock-alt"></i>
                                             </div>
-                                            <a href="#" class="btn mt-4">회원가입</a>
+                                            <a href="#" id="singup" class="btn mt-4">회원가입</a>
                                         </div>
                                     </div>
                                 </div>
@@ -76,5 +76,6 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
     crossorigin="anonymous"></script>
+	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script src="js/login.js"></script>
 </html>
